Improve video list layout, fix Safari layout issue, add hover effects for video and news

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -23,13 +23,8 @@
     .setting-container > .asset-index-card {
         margin: 0 0.25em;
     }
-    > {
-        .video-list {
-            margin: 0 0.25em;
-        }
-        .trading-times-card {
-            margin: 0 0.25em;
-        }
+    > .trading-times-card {
+        margin: 0 0.25em;
     }
     .trade-panel {
         flex-direction: column;
